--- a/shader/package.json
+++ b/shader/package.json
@@ -18,6 +18,7 @@
     "@types/three": "^0.149.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "glslify": "^7.1.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "vite-plugin-glsl": "^1.1.2"
   }
 }
